docs: update documentation after included JavaFX Maven dependencies