@@ -9,31 +9,24 @@
 > - Java(TM) SE Runtime Environment (build 21.0.2+13-LTS-58)
 > - Java HotSpot(TM) 64-Bit Server VM (build 21.0.2+13-LTS-58, mixed mode, sharing)
 
-- Download JavaFX 21 SDK
-> https://gluonhq.com/products/javafx/
+- Download Maven and add maven as environment variable
+> mvn -v
+> - Apache Maven 3.9.6 (bc0240f3c744dd6b6ec2920b3cd08dcc295161ae)
+> - Maven home: C:\Program Files\apache-maven-3.9.6
+> - Java version: 21.0.2, vendor: Oracle Corporation, runtime: C:\Program Files\Java\jdk-21
+> - Default locale: pl_PL, platform encoding: UTF-8
+>- OS name: "windows 10", version: "10.0", arch: "amd64", family: "windows"
 
-- Paste javafx-sdk into main project folder
 
-
-## IntelliJ configuration
-- Set Java 21 as project sdk (File -> Project Structure -> Project Settings -> Project)
+## IntelliJ
+- How to run project IntelliJ maven panel
 
 ![Image1](/documentation/img.png)
 
-- Add JavaFx SDK as a library (File -> Project Structure -> Project Settings -> Project)
+## How to build and run package
+> - mvn clean package
+> - mvn javafx:run
 
-![Image2](/documentation/img_1.png)
-
-- Edit run configuration
-
-Modify options -> Add VM options
-
-Paste this configuration:
-
---module-path "javafx-sdk-21.0.4/lib" --add-modules javafx.controls,javafx.fxml
-
-![Image3](/documentation/img_2.png)
-![Image4](/documentation/img_3.png)
 
 
 
